--- a/Tema 3/Relación 3/relacion3.html
+++ b/Tema 3/Relación 3/relacion3.html
@@ -2,6 +2,18 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Relación 3</title>
+		<style type="text/css">
+			#raya3 {
+				border: 0px;
+				margin: auto auto;
+			}
+
+			#raya3 td {
+				width: 190px;
+				height: 190px;
+				background-color: #DDDDDD;
+			}
+		</style>
 		<script type="text/javascript" src="3r.js"></script>
 	</head>
 	<body>
