--- a/Tema 3/Relación 3/relacion3.html
+++ b/Tema 3/Relación 3/relacion3.html
@@ -9,9 +9,15 @@
 			}
 
 			#raya3 td {
-				width: 190px;
-				height: 190px;
+				width: 170px;
+				height: 170px;
 				background-color: #DDDDDD;
+				text-align: center;
+				color: #333;
+				font-size: 70px;
+			}
+			#insert h2 {
+				text-align: center;
 			}
 		</style>
 		<script type="text/javascript" src="3r.js"></script>
