--- a/Tema 3/Relación 3/puzzle.html
+++ b/Tema 3/Relación 3/puzzle.html
@@ -7,12 +7,14 @@
 				padding: 0px;
 				margin: 0px;
 				height: 100%;
+				background-color: #FFF;
 			}
 			table {
 				width: 100%;
+				border-collapse: collapse;
 			}
 			table td:hover {
-				opacity: 0.8;
+				opacity: 0.7;
 			}
 		</style>
 		<script type="text/javascript" src="puzzle.js"></script>
