--- a/Tema 4/Relación 1/relacion1.html
+++ b/Tema 4/Relación 1/relacion1.html
@@ -2,22 +2,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Relación 1</title>
-		<!-- <script type="text/javascript" src="ej1.js"></script> -->
-		<!-- <script type="text/javascript" src="ej2.js"></script> -->
-		<script type="text/javascript" src="ej3.js"></script>
-		<!-- <script type="text/javascript" src="ej6.js"></script> -->
-		<!-- <script type="text/javascript" src="ej7.js"></script> -->
-		<style type="text/css">
-			video {
-				width: 300px;
-				height: 300px;
-			}
-		</style>
+		<script type="text/javascript" src="ej1.js"></script>
 	</head>
 	<body>
 		<noscript>
 			<p>No tienes javascript habilitado</p>
 		</noscript>
+		<a onclick="aler();" href="#">Onclick alert</a>
+		<!-- <div id="mm" style="border:1px solid #666; width:200px; height:200px;"></div> -->
 		<div id="insert"></div>
 	</body>
 </html>
