--- a/Tema 4/Relación 1/relacion1.html
+++ b/Tema 4/Relación 1/relacion1.html
@@ -3,6 +3,11 @@
 		<meta charset="utf-8">
 		<title>Relación 1</title>
 		<script type="text/javascript" src="ej1.js"></script>
+		<style type="text/css">
+			#imgMover {
+				position: absolute;
+			}
+		</style>
 	</head>
 	<body>
 		<noscript>
@@ -10,6 +15,10 @@
 		</noscript>
 		<a onclick="aler();" href="#">Onclick alert</a>
 		<!-- <div id="mm" style="border:1px solid #666; width:200px; height:200px;"></div> -->
+		<div id="moverimg" style="border:1px solid #666; width:600px; height:400px;">
+			<img id="imgMover" src="img-mover.jpg"/>
+		</div>
 		<div id="insert"></div>
+		<div id="insert2"></div>
 	</body>
 </html>
