Acabada la relación

--- a/Tema 4/Relación 1/relacion1.html
+++ b/Tema 4/Relación 1/relacion1.html
@@ -4,7 +4,7 @@
 		<title>Relación 1</title>
 		<script type="text/javascript" src="ej1.js"></script>
 		<style type="text/css">
-			#imgMover {
+			img {
 				position: absolute;
 			}
 		</style>
@@ -17,6 +17,7 @@
 		<!-- <div id="mm" style="border:1px solid #666; width:200px; height:200px;"></div> -->
 		<div id="moverimg" style="border:1px solid #666; width:600px; height:400px;">
 			<img id="imgMover" src="img-mover.jpg"/>
+			<img id="imgMover2" style="top: 200px" src="img-mover.jpg"/>
 		</div>
 		<div id="insert"></div>
 		<div id="insert2"></div>
