Notas vinculadas a localStorage

--- a/Tema 5/Relación 5/relacion5.html
+++ b/Tema 5/Relación 5/relacion5.html
@@ -31,6 +31,12 @@
 				display: inline-block;
 				vertical-align: top;
 			}
+			.fecha-posit {
+				font-size: 12px;
+				padding: 10px 10px 0px 10px;
+				color: #AAA;
+				text-align: center;
+			}
 			.cerrar-posit {
 				float: right;
 				display: block;
